--- a/series.bib
+++ b/series.bib
@@ -104,3 +104,19 @@ MRREVIEWER = {M. E. Watkins},
   year = 	 2009,
   volume = 	 80}
 
+@article {MR2787937,
+    AUTHOR = {Gutin, Gregory and Mansour, Toufik and Severini, Simone},
+     TITLE = {A characterization of horizontal visibility graphs and
+              combinatorics on words},
+   JOURNAL = {Phys. A},
+  FJOURNAL = {Physica A. Statistical Mechanics and its Applications},
+    VOLUME = {390},
+      YEAR = {2011},
+    NUMBER = {12},
+     PAGES = {2421--2428},
+      ISSN = {0378-4371},
+   MRCLASS = {05C75 (05A05 05C30 05C45 05E15 68R10)},
+  MRNUMBER = {2787937},
+       DOI = {10.1016/j.physa.2011.02.031},
+       URL = {http://dx.doi.org/10.1016/j.physa.2011.02.031},
+}
